manifestsserveurdecouverte - afrilins/service-registryserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-register-dev
spec:
  selector:
    app: registry-backend-dev
    type: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 18761
      targetPort: 18761 
      name: http-front
      nodePort: 30102
