manifestsserveurdecouverte - afrilins/virtualServiceBackend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: registry-backend-vs
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        prefix: /eureka
    rewrite: 
      uri: "/"      
    route:
    - destination:
        host: service-registry.default.svc.cluster.local
        port:
          number: 8761
